Added permalink capability to shows. Now clicking on the titles just filters out the list.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -170,6 +170,10 @@ header{
  */
 .show__image{}
 
+    .show__image a{
+        border-bottom: none;
+    }
+
     .show__image img{
         height: 150px;
         width: auto;
